<resources>
    <string name="app_name">GoTaca</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="action_settings">Settings</string>
    <string name="chosen_street">Todos os corredores</string>
    <string name="title_activity_login">Sign in</string>
    <string name="facebook_app_id">540876123045937</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Logar</string>
    <string name="action_sign_in_short">Logar</string>
    <string name="error_invalid_email">Este e-mail não é válido.</string>
    <string name="error_invalid_password">A senha deve conter mais que 4 algarismos.</string>
    <string name="error_incorrect_password">A senha é incorreta.</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="sign_up_button">Ainda não tem uma conta? Cadastre-se!</string>
    <string name="Logout">Sair</string>
    <string name="change_password">Mudar senha</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="name_signup">Nome</string>
    <string name="profile_user">Garagem</string>
    <string name="best_fuel">Melhor opção: </string>
    <string name="terms_title_t">Termos de compromisso</string>
    <string name="rights_responsability_title">Declaração de direitos e responsabilidades</string>
    <string name="rights_responability_text">Essa declaração é baseada nos princípios do GoTaca e representam os termos que regem o nosso relacionamento com os usuários e outras pessoas que interajam com o GoTaca, sejam elas pessoas físicas ou jurídicas. Ao utilizar o GoTaca, o usuário concorda com esta declaração. Todas as edições ou acordos complementares deverão ser posteriormente aceito pelo usuário. O usuário que não concordar com nova versão desta declaração, será excluído da base de dados do GoTaca. Ao realizar qualquer interação com o GoTaca ou com qualquer outro serviço proveniente deste, o usuário concorda com o termo referente à interação realizada. Caso o usuário cadastrado no GoTaca violar o texto ou a essência desta declaração, ou gerar possível risco ou exposição legal, poderá ocorrer a interrupção de qualquer serviço vinculado ao GoTaca.</string>
    <string name="idea_saved_title">Proteção da ideia</string>
    <string name="idea_saved_text">O usuário do GoTaca está autorizado a divulgar e compartilhar apenas as informações disponíveis nas redes sociais, compartilhadas pela equipe do GoTaca através do Facebook e Instagram, e nos serviços disponibilizados através da plataforma do GoTaca, ficando ressalvado o direito à indenização no caso de prejuízo ao GoTaca. As informações divulgadas através de e-mail são de uso exclusivo do usuário cadastrado no GoTaca, podendo ser divulgadas com autorização prévia e expressa do GoTaca. Caso o usuário tenha interesse em divulgar as informações, solicitará autorização através da página www.gotaca.com. Somente após autorização, as informações serão divulgadas conforme pré-estabelecido.</string>
    <string name="personal_info_use_title">Uso das informações pessoais</string>
    <string name="personal_info_use_text">Os usuários do GoTaca concordam em ter seus dados pessoais transferidos e processados no país onde o GoTaca possui infraestrutura própria ou de terceiros. A privacidade do nosso usuário é de grande importância para nós. Entendemos que o usuário é proprietário das suas informações pessoais, independente da legislação vigente em seu país. Portanto, através da aceitação deste acordo, o usuário nos autoriza a divulgar suas informações ou utiliza-las, conforme previsto nesta declaração. Os usuários autorizam o uso das informações pessoais vinculadas ao GoTaca com a finalidade de uso estatístico ou criação de banco de dados, que permita o desenvolvimento de serviços próprios ou de terceiros baseados no perfil de consumo e perfis de usuários. O usuário deverá cadastrar apenas informações verídicas. Não deverá ser criado registro falso ou de outra pessoa que o usuário não tenha autorização. Cada usuário poderá cadastrar apenas uma conta pessoal. O registro de contas é permitido apenas para usuários que possua capacidade plena para o exercício de direitos e deveres. Não é autorizado o registro de usuários que estejam cumprindo penalizações em regime fechado independente da legislação vigente no país. Caso o usuário tome conhecimento de alguma conta que possa ter sido criada em seu nome sem a autorização, o GoTaca se reserva no direito da exclusão da conta. O GoTaca se reserva no direito de utilizar as informações pessoais do usuário para disponibilização às instituições que tenham por finalidade o cumprimento da legislação vigente no país. As informações bancárias e endereço dos usuários não serão divulgados a nenhuma outra instituição, devendo ser utilizadas apenas pelo GoTaca para desenvolvimento próprio, salvo quando houver ordem judicial solicitando as informações. O usuário autoriza o uso da sua imagem para divulgação de informações relacionadas ao GoTaca, sem limitação de divulgação através de mídias sociais, bem como redes sociais, canais de streaming, site e canais de televisão e radiodifusão. A segurança dos dados disponibilizados pelos usuários do GoTaca é de grande importância, porém o GoTaca não pode garantir a segurança. Portanto, O GoTaca conta com um esforço conjunto dos usuários, denunciando Spam, evitando a utilização de softwares e plataformas que possam conter arquivos ou programas danosos ao computador, como vírus, e a não utilização de códigos mal-intencionados. O GoTaca considera como obrigação do usuário, não facilitar ou incentivar a violação desta declaração ou das políticas divulgadas pelo GoTaca.</string>
    <string name="disputes_title">Disputas</string>
    <string name="disputes_text">Apesar do GoTaca buscar sempre a segurança das informações dos usuários e de evitar os erros, entende-se que o usuário opta por utiliza-lo por sua conta em risco. Se o GoTaca for disponibilizado no estado ou província do usuário, não haverá garantia expressa ou implícita, incluindo, sem limitação, garantias implícitas de comercialização. Adequação a uma finalidade especifica e não infração. Não garantimos que o GoTaca será sempre seguro, sem erros e que funcione ininterruptamente. O GoTaca não se responsabiliza por ações, conteúdos, informações ou dados de terceiros. O usuário isenta o GoTaca, bem como seus fundadores, investidores, diretores, executivos, funcionários e agentes de qualquer reclamação que você tenha contra terceiros, independente da legislação vigente do local onde o usuário reside. O GoTaca não se responsabiliza por qualquer perda de lucro ou danos consequentes especiais, indiretos ou acidentais decorrentes de ou relativos a esta declaração ou ao GoTaca. Fica eleito o foro da Comarca de Belo Horizonte, como competente para qualquer ação judicial, reclamação, reinvindicação ou disputa, relacionada ao presente aplicativo e a este termo ou outros que porventura vierem a ser consignados.</string>
    <string name="definitions_title">Definições</string>
    <string name="definitions_text">Os termos GoTaca ou serviços do GoTaca abrangem os recursos e serviços que disponibilizamos, inclusive subdomínios, versões internacionais, widgets e versões para dispositivos móveis. O termo “dados” ou “dados do usuário” envolve todos os dados, incluindo conteúdo ou informações de um usuário que o usuário ou terceiros possam obter do GoTaca ou fornecer ao GoTaca por qualquer plataforma diretamente ou indiretamente vinculada a este. O termo plataforma envolve um conjunto de serviços que permitem que outras pessoas, inclusive desenvolvedores e operadores de sites, recuperem dados do GoTaca ou forneçam dados para o GoTaca.</string>
    <string name="general_title">Informações gerais</string>
    <string name="general_text">Esta declaração compõe todo o acordo entre as partes em relação ao GoTaca e tem precedência sobre os acordos anteriores. Se o GoTaca falhar em impor qualquer parte desta declaração, isso não será considerado como abdicação de direitos. Qualquer alteração dessa declaração deve ser assinada por todos os sócios fundadores do GoTaca. Todos os direitos e obrigações do GoTaca sob esta declaração são livremente atribuídos pelo GoTaca em relação a fusões, aquisições, vendas de bens, imposição legal ou outro fator. Nada nesta declaração impedirá o GoTaca de cumprir a lei. Esta declaração não confere direitos que beneficiem terceiros. Os usuários devem obedecer às leis aplicáveis quando estiver usando ou acessando o GoTaca. Esta declaração poderá ser vinculada a termos complementares, desde que estes sejam assinados pelos sócios fundadores e que seja apresentado aos usuários através de página disponível em alguma das plataformas do GoTaca. As informações referentes aos preços apresentados no GoTaca são geradas a partir de pesquisa in loco e através do envio de fotos pelos usuários. O GoTaca apenas apresenta uma pesquisa dos preços praticados pelo mercado. O GoTaca não se responsabiliza pela inexatidão dos preços. Todavia, o GoTaca busca manter uma taxa de atualização dos preços eficiente. Portanto, o apoio dos usuários enviando fotos confirmando o preço ou quando o mesmo estiver desatualizado ajudará o GoTaca a disponibilizar informações próximas das verificadas no mercado. O GoTaca não possui relação com os postos de combustíveis ou distribuidores de combustíveis. O GoTaca não é e nem será responsável pelas informações disponibilizadas pelos estabelecimentos pesquisados, pelos preços e informações dos produtos ou serviços apresentados na plataforma, pela serventia ou credibilidade dos produtos ou serviços, pela negociação ou a participação em estabelecimentos pesquisados, pela segurança dos usuários nos estabelecimentos ou no uso dos produtos e serviços disponibilizados pelos estabelecimentos pesquisados na plataforma, pela disponibilidade dos produtos ou serviços pesquisados na plataforma do GoTaca e pela privacidade nos estabelecimentos pesquisados. Qualquer relação entre os estabelecimentos e os usuários do GoTaca vincularão apenas entre o respectivo usuário e estabelecimento.</string>
    <string name="terms_title_menu">Termos</string>
    <string name="delete_account">Deletar a conta</string>
    <string name="tutorial_string">Tutorial</string>
    <string name="press_title">Imprensa</string>
    <string name="press_text">O GoTaca é destinado ao uso dos usuários cadastrados no aplicativo conforme definido pelos Termos de compromisso. O uso das informações provenientes dos serviços do GoTaca pela imprensa deverá ser solicitado ao e-mail eduardo@gotaca.com, havendo possibilidade de disponibilização das informações de forma gratuita mediante autorização expressa e citada a fonte www.gotaca.com. O uso do GoTaca é vetado aos órgãos públicos e empresas privadas como fonte de compras, tomadas de preços e licitações. O interesse a partir desses setores poderá ser expresso através de contato através do e-mail eduardo@gotaca.com. A autorização ficará a cargo do GoTaca.</string>
    <string name="premia">Premiação</string>
    <string name="admob_video">AdMob Video</string>
    <string name="combustivel_preferido">Combustível preferido</string>

</resources>
