<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gotaca.gotaca.MainActivity">
    <item
        android:id="@+id/Premiação"
        android:orderInCategory="1"
        android:title="@string/premia"
        app:showAsAction="never" />
    <item
        android:id="@+id/profileTeste"
        android:orderInCategory="2"
        android:title="@string/profile_user"
        app:showAsAction="never" />
    <item
        android:id="@+id/tutorialMenu"
        android:orderInCategory="3"
        android:title="@string/tutorial_string"
        app:showAsAction="never" />
    <item
        android:id="@+id/termsRights"
        android:orderInCategory="4"
        android:title="@string/terms_title_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="5"
        android:title="@string/Logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/adMob"
        android:orderInCategory="6"
        android:title="@string/admob_video"
        app:showAsAction="ifRoom"
        android:icon="@drawable/admob"/>

    <item
        android:id="@+id/userlist"
        android:orderInCategory="8"
        android:title="User List"
        app:showAsAction="never" />

    <item
        android:id="@+id/orderQuery"
        android:orderInCategory="7"
        android:title="@string/combustivel_preferido"
        app:showAsAction="ifRoom"
        android:icon="@drawable/filter_icon"/>
</menu>