<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/terms_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_title_t"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    <TextView
        android:id="@+id/rights_responsability_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/rights_responsability_title"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/rights_responsability_t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rights_responability_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/idea_saved_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/idea_saved_title"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/idea_saved_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/idea_saved_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/press_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/press_title"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/press_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/press_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/personal_info_use_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/personal_info_use_title"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/personal_info_use_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/personal_info_use_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/disputes_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/disputes_title"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/disputes_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/disputes_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/definitions_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/definitions_title"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/definitions_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/definitions_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/general_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/general_title"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/general_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/general_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    </LinearLayout>
</ScrollView>